[package]
name = "os"
version = "0.1.0"
authors = ["David Bao <1353406961@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
